Style right side of the hero section
Add grid layout to announcements and trending sections

--- a/index.html
+++ b/index.html
@@ -258,32 +258,50 @@
             </div>
           </div>
         </div>
+        
         <div class="right-side-hero">
           <div class="announcements">
-            Announcements
-            <div class="announcements-card">
-              <div class="title">Site Maintanance</div>
-              <div class="content">
+
+            <div class="announcements-title">Announcements</div>
+
+            <div class="announcements-cards">
+            <div class="announcement-card">
+
+              <div class="announcement-title">Site Maintanance</div>
+              <div class="announcement-content">
                 Fusce magna purus, cursus eu dui ac, luctus volutpat libero. Sed
                 lobortis scelerisque dolor, id.
               </div>
             </div>
-            <div class="announcements-card">
-              <div class="title">Community Fair</div>
-              <div class="content">
+
+            <div class="announcement-card">
+              <div class="announcement-title">Community Fair</div>
+              <div class="announcement-content">
                 Vestibulum ornare nunc nulla, et viverra libero dapibus ut.
                 Proin pharetra, enim ac mattis rutrum.
               </div>
             </div>
-            <div class="announcements-card">
-              <div class="title">Updated Terms & Conditions</div>
-              <div class="content">
+
+            <div class="announcement-card">
+              <div class="announcement-title">Updated Terms & Conditions</div>
+              <div class="announcement-content">
                 Donec in neque gravida, porta purus eget, cursus sem. Morbi
                 feugiat dignissim dapibus. Donec eleifend.
               </div>
             </div>
+
+
           </div>
+        </div>
+
+
           <div class="trending">
+
+            <div class="trending-title">Trending</div>
+
+            <div class="trending-container">
+
+
             <div class="trending-card">
               <img
                 class="profile-photo"
@@ -293,6 +311,8 @@
               <div class="user-name">@somethingOdd</div>
               <div class="project-name">New Cherry Picker</div>
             </div>
+
+
             <div class="trending-card">
               <img
                 class="profile-photo"
@@ -302,6 +322,8 @@
               <div class="user-name">@katem</div>
               <div class="project-name">Plant Shop App</div>
             </div>
+
+
             <div class="trending-card">
               <img
                 class="profile-photo"
@@ -311,6 +333,8 @@
               <div class="user-name">@robertoro</div>
               <div class="project-name">Quick Sneak Peak</div>
             </div>
+
+
             <div class="trending-card">
               <img
                 class="profile-photo"
@@ -320,9 +344,12 @@
               <div class="user-name">@PrettyFly</div>
               <div class="project-name">Marvelous Hop</div>
             </div>
+
+
           </div>
         </div>
-      </div>
+
+
     </div>
   </body>
 </html>
